Fix annoying flickering if image asset isn't present

--- a/web/app/css/sidebar.css
+++ b/web/app/css/sidebar.css
@@ -59,6 +59,7 @@ ul.ant-menu.ant-menu-sub {
   }
 
   & .sidebar-menu-header {
+    height: 80px;
     padding: calc(var(--base-width)*2) 14px;
 
     &.collapsed {
